--- a/dev/vagrantprovisioning/vhosts/project.conf
+++ b/dev/vagrantprovisioning/vhosts/project.conf
@@ -3,7 +3,7 @@
     ServerAlias www.wt-projekt.test
 
     ServerAdmin webmaster@localhost
-    DocumentRoot /project/source/www/public/
+    DocumentRoot /project/source/public/
 
     <Directory /project/source/>
         Options FollowSymLinks
