--- a/dev/vagrantprovisioning/vhosts/project.conf
+++ b/dev/vagrantprovisioning/vhosts/project.conf
@@ -1,13 +1,15 @@
 <VirtualHost *:80>
     ServerName wt-projekt.test
-    ServerName www.wt-projekt.test
+    ServerAlias www.wt-projekt.test
 
     ServerAdmin webmaster@localhost
-    DocumentRoot /project/source/www/
+    DocumentRoot /project/source/public/
 
     <Directory /project/source>
-        Options Indexes FollowSymLinks MultiViews
+        Options FollowSymLinks
         AllowOverride All
+        Order allow,deny
+        Allow from all
         Require all granted
     </Directory>
 
